samples/_failures_safe/1761731210_ca3a01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_739c68f2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_739c68f2.c:180:9: error: expected declaration or statement at end of input
  180 |         char current = peek(lexer);
      |         ^~~~
./samples/SAFE/__tmp_739c68f2.c:180:9: error: expected declaration or statement at end of input
